Cosypos project setup config

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,81 @@
-.App {
-  text-align: center;
+* {
+  padding: 0;
+  margin: 0;
+  appearance: none;
+  text-decoration: none;
+  color: #222;
+  box-sizing: border-box;
+  font-family: 'Poppins';
+  font-style: normal;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+:root {
+  --card-1: #CFDDDB;
+  --card-2: #E4CDEE;
+  --card-3: #C2DBE9;
+  --card-4: #C9CAEE;
+  --card-5: #FAC2D9;
+  --card-6: #E6DADE;
+  --card-7: #F0C8CF;
+  --card-8: #C3E9DE;
+  --Green: #84C27D, #2D2D2D -100%, #2D2D2D -70%, #747474 -100%, #A6A6A6 -100%, #8E8E8E -100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+ul,
+ol {
+  list-style: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+@font-face {
+  font-family: 'Poppins';
+  src: url('../src/components/assets/fonts/Poppins-ExtraBold.woff2') format('woff2'),
+    url('../src/components/assets/fonts/Poppins-ExtraBold.woff') format('woff');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
 }
 
-.App-link {
-  color: #61dafb;
+@font-face {
+  font-family: 'Poppins';
+  src: url('../src/components/assets/fonts/Poppins-Light.woff2') format('woff2'),
+    url('../src/components/assets/fonts/Poppins-Light.woff') format('woff');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@font-face {
+  font-family: 'Poppins';
+  src: url('../src/components/assets/fonts/Poppins-Bold.woff2') format('woff2'),
+    url('../src/components/assets/fonts/Poppins-Bold.woff') format('woff');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Poppins';
+  src: url('../src/components/assets/fonts/Poppins-Medium.woff2') format('woff2'),
+    url('../src/components/assets/fonts/Poppins-Medium.woff') format('woff');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Poppins';
+  src: url('../src/components/assets/fonts/Poppins-Regular.woff2') format('woff2'),
+    url('../src/components/assets/fonts/Poppins-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Poppins';
+  src: url('../src/components/assets/fonts/Poppins-SemiBold.woff2') format('woff2'),
+    url('../src/components/assets/fonts/Poppins-SemiBold.woff') format('woff');
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
 }
